# GPGPU

./: .gitignore
src_td1/: CMakeLists.txt  Makefile  TD1
src_td1/shaders/: treatmentShader.frag  treatmentShader.vert  visuShader.frag  visuShader.vert
src_td1/src/: CMakeLists.txt  display.cpp  display.hpp  imageComputation.cpp  imageComputation.hpp  interface.cpp  interface.hpp  main.cpp  rtfbo.hpp
src_td1/tools/: basic_mesh.hpp  globals.hpp  mesh.hpp  shaders.hpp  texture.hpp
